--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -33,20 +33,20 @@
 
 .animationSlideIn {
     transform: translateY(100%);
-    animation: slide-in 0.3s cubic-bezier(.62,.14,.31,1.12) forwards;
+    animation: slide-in 0.35s cubic-bezier(.62,.14,.31,1.12) 0.1s forwards;
 }
 
 .animationSlideOut {
-    animation: slide-out 0.3s cubic-bezier(.2,.45,.43,.87) forwards;
+    animation: slide-out 0.35s cubic-bezier(.2,.45,.43,.87) 0.1s forwards;
 }
 
 .animationFadeIn {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    animation: fadeIn 0.3s cubic-bezier(.62,.14,.31,1.12) forwards;
+    animation: fadeIn 0.35s cubic-bezier(.62,.14,.31,1.12) forwards;
 }
 
 .animationFadeOut {
-    animation: fadeOut 0.3s cubic-bezier(.2,.45,.43,.87) forwards;
+    animation: fadeOut 0.35s cubic-bezier(.2,.45,.43,.87) forwards;
 }
